src/snapshots/glass__codegen_tests__topo_sort.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_a takes nothing returns integer
    return 42
endfunction

function glass_b takes nothing returns integer
    return glass_a()
endfunction

function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_a()
    return 42
end

function glass_b()
    return glass_a()
end
