src/snapshots/glass__codegen_tests__tuple_destructure.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_first takes integer t returns integer
    local integer a
    local integer _b
    local integer glass_tmp_0
    set glass_tmp_0 = t
    set a = glass_get_Tuple2_integer_integer_Tuple2_integer_integer__0 [glass_tmp_0]
    set _b = glass_get_Tuple2_integer_integer_Tuple2_integer_integer__1 [glass_tmp_0]
    return a
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_first(t)
    local __tup_1 = t
    local a = __tup_1[1]
    local _b = __tup_1[2]
    return a
end
